--- a/src/pages/main_page/main.css
+++ b/src/pages/main_page/main.css
@@ -17,6 +17,7 @@ body {
     font-size: 150px;
     font-family: var(--text-main-fam);
     color: white;
+    text-align: center;
 }
 
 .wave {
@@ -31,8 +32,8 @@ body {
 
 .main-button {
     all: unset;
-    width: 25rem;
-    height: 8rem;
+    width: 8em;
+    height: 3em;
     background-color: var(--btn-clr);
     border-radius: 50px;
     color: white;
@@ -57,9 +58,32 @@ body {
 
 /* Responsive design */
 
-/* 900px */
+@media only screen and (max-width: 1020px) {
 
-@media only screen and (max-width: 900px) {
+    .header {
+        height: 40vh;
+    }
+
+    .main-title {
+        font-size: 100px;
+    }
+
+    .main-button-container {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 5rem;
+        margin-top: 4.7rem;
+    }
+
+    .main-button:hover {
+
+    }
+
+}
+
+
+/* @media only screen and (max-width: 900px) {
     .header {
         height: 40vh;
     }
@@ -78,12 +102,15 @@ body {
     .main-button:hover {
 
     }
-}
+} */
 
-@media only screen and (max-width: 400px) {
+
+
+@media only screen and (max-width: 500px) {
     .header {
         height: 40vh;
     }
+
     .main-title {
         font-size: 50px;
     }
@@ -97,8 +124,8 @@ body {
     }
 
     .main-button {
-        width: 15rem;
-        font-size: 1.5rem;
+        width: 80%;
+        font-size: 1.7rem;
     }
     .main-button:hover {
 
