--- a/src/pages/main_page/main.css
+++ b/src/pages/main_page/main.css
@@ -44,11 +44,11 @@ body {
     cursor: pointer;
 }
 
-.main-button:hover {
+/* .main-button:hover {
     background-color: var(--main-clr);
     transform: scale(0.9);
     transition: 0.2s;
-}
+} */
 
 .main-button:active {
     background-color: var(--btn-clr);
@@ -56,7 +56,21 @@ body {
 }
 
 
+
 /* Responsive design */
+
+@media (hover: hover) {
+    .main-button:hover {
+        background-color: var(--main-clr);
+        transform: scale(0.9);
+        transition: 0.2s;
+    }
+
+    .main-button:active {
+        background-color: var(--btn-clr);
+        transform: scale(1.2);
+    }
+}
 
 @media only screen and (max-width: 1020px) {
 
@@ -75,11 +89,6 @@ body {
         gap: 5rem;
         margin-top: 4.7em;
     }
-
-    .main-button:hover {
-
-    }
-
 }
 
 
@@ -106,11 +115,4 @@ body {
         font-size: 1.7rem;
     }
 
-    .main-button:hover {
-
-    }
-
-    .main-button:active {
-
-    }
 }
