Add mock cards page and add condition to display counter

--- a/src/pages/questions_page/questions.css
+++ b/src/pages/questions_page/questions.css
@@ -10,6 +10,10 @@
     padding: 0 1rem;
 }
 
+.counter-container {
+    background-color: red;
+}
+
 .counter {
     font-family: var(--text-sec-fam);
     font-size: 3.125rem;
